# sdltemplate

./: .gitignore  CMakeLists.txt  README.md  setup.sh
assets/: readme.md
src/: CMakeLists.txt  main.cpp
